      used to compile a human-readable filter string into a more compact
      "object" format.  The object format can be used in place of the
      human readable format for all WinDivert operations.
    - Add a new WinDivertHelperFormatFilter() helper function that formats a
      filter string into a normalized form.  It also can be used to
      "de-compile" the object format into a human readable form.
    - Add a new WinDivertHelperDecrementTTL() function that decrements the
      ip.TTL/ipv6.HopLimit field of a packet.
    - Add new WinDivertHelperNto*()/WinDivertHelperHton*() helper functions
      for swapping from network to host byte ordering, and vice versa.
    - WinDivertOpen() priorities now are ascending, meaning that higher
      values correspond to higher priorities.
    - The last two arguments for WinDivertRecv() and WinDivertSend() have been
      swapped.
WinDivert 2.0.1-rc
    - Fix WFP callout install optimization bug.
    - Fix WinDivertHelperNtohIpv6Address/WinDivertHelperHtonIpv6Address bug.
    - Rename the following functions for consistency:
      * WinDivertHelperNtohIpv6Address -> WinDivertHelperNtohIPv6Address
      * WinDivertHelperHtonIpv6Address -> WinDivertHelperHtonIPv6Address
WinDivert 2.1.0
    - WinDivertOpen() now supports a new flag:
      * WINDIVERT_FLAG_FRAGMENTS: If set, the handle will capture inbound IP
        fragments, but not inbound reassembled IP packets.  Otherwise, if not
        set (the default), the handle will capture inbound reassembled IP
        packets, but not inbound IP fragments.  This flag only affects
        inbound packets at the NETWORK layer.
    - Filter fields inbound/outbound are now supported at the SOCKET layer.
    - Fix BSOD caused by packets with missing or incomplete transport
      headers (introduced in 2.0.0).
    - Fix missing Flow.EndpointId and Flow.ParentEndpointId for IPv6 flows.
WinDivert 2.2.0
    - Implement new packet parser that correctly handles IP fragments.